[project]
name = "introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext>=0.6.4",
    "dotenv>=0.9.9",
    "openai>=1.97.1",
    "tiktoken>=0.9.0",
]
